--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -43,6 +43,7 @@
      <Compile Include="Assets\Scripts\Enums.cs" />
      <Compile Include="Assets\Scripts\MapDetails.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\Weapon.cs" />
     <Reference Include="UnityEngine">
         <HintPath>E:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
