--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -41,8 +41,12 @@
      <Compile Include="Assets\Scripts\BasicStat.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\Enums.cs" />
+     <Compile Include="Assets\Scripts\FloatingText.cs" />
+     <Compile Include="Assets\Scripts\FloatingTextManager.cs" />
+     <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\MapDetails.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\SingletonMonobehaviour.cs" />
      <Compile Include="Assets\Scripts\Weapon.cs" />
     <Reference Include="UnityEngine">
         <HintPath>E:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
